# AGO

./: package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: App.tsx  index.css  theme.css
src-tauri/: .gitignore  .taurignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/__data_gen/: data_log.csv
src-tauri/data_gen/: data_log.csv
src-tauri/src/: lib.rs  main.rs
src-tauri/src/c/inc/: ControlCANFDx64.h  ControlCANFDx64_f.h  config.h
src-tauri/src/c/lib/: ControlCANFDx64.lib
src-tauri/src/models/: loop_cmd_mod.rs  map_mod.rs  matlab_mod.rs  mcu_control_mod.rs  mod.rs  plotter_mod.rs  wifi_mod.rs  wifi_packet_mod.rs
src-tauri/src/models/WSCan/: frame.rs  main.rs
src-tauri/src/models/WSFdCan/: fdcan_c.rs  main.rs
src-tauri/src/models/data/: main.rs  motor.rs  vehicle.rs
src-tauri/src/models/serial_port/: main.rs
src-tauri/src/models/unused/: map_mod.rs  tauri_test_mod.rs  uart_packet_mod.rs  uart_packet_proc_mod.rs
src-tauri/src/mods/: map_mod.rs  uart_mod.rs  uart_packet_mod.rs
src/components/: Controller.tsx  DataReceive.tsx  DataRecieve.tsx  DataStatisticsPanel.tsx  DirectionControls.tsx  Layout.tsx  Navbar.tsx  ReceivedDataPanel.tsx  SerialConsole.tsx  SpeedControl.tsx  SystemLogs.tsx  VehicleHeader.tsx  VehicleStatusPanel.tsx
src/config/: websocket.ts
src/hooks/: WSCan.ts  WSCanSendReceive.ts  index.ts  serialPortHelpers.ts  useDataReceive.ts  useDataStatistics.ts  useVehicleLogs.ts  useVehicleStatus.ts  useWSCan.ts  useWebWSCan.ts
src/models/: index.ts  vehicleDatas.ts
src/pages/: ControlPage.tsx  (+8 more)
(+39 files in other folders)
