[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tokio = { version = "1.50.0", features = ["full"] }
tauri-plugin-opener = "2"
serialport = "4.9.0"
plotters = "0.3.7"
base64 = "0.22.1"
rand = "0.9.2"
regex = "1.12.3"
tokio-serial = "5.4.5"
libloading = "0.8.9"
libc = "0.2.183"
chrono = "0.4.44"
ansi_term = "0.12.1"
fern = "0.7.1"
